# k8s-controller

./: Cargo.toml  README.md  init.sh
src/: main.rs
