[package]
name = "k8s-controller"
version = "0.1.0"
authors = ["Derek Strickland <derek.strickland@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kube = "0.12.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
failure = "0.1.5"